# berserk-client-rust

./: Cargo.toml  LICENSE  README.md  build.rs
proto/: dynamic_value.proto  query.proto
src/: config.rs  error.rs  grpc.rs  http.rs  lib.rs  types.rs
tests/: e2e.rs
